add find method